# cohort-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.ps1  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
doc/: cohort-pipeline-notes.md  tui-backlog.md
docs/: agds-vs-genotype-store-staar.md  performance.md  setup.md  staar.md  statistical-divergences.md  storage.md  validation.md
scripts/r/: generate_staar_ground_truth.R
src/: annotation_db.rs  cli.rs  column.rs  config.rs  db.rs  engine.rs  error.rs  feedback.rs  main.rs  mode.rs  output.rs  packs.rs  resource.rs  runtime.rs  test_fixtures.rs  tui.rs  types.rs  variant_set.rs
src/commands/: annotate.rs  data.rs  dry_run.rs  enrich.rs  ingest.rs  init.rs  inspect.rs  interpret.rs  ld_prune.rs  manifest.rs  meta_staar.rs  mod.rs  publish.rs  schema_cmd.rs  setup.rs  staar.rs  uninstall.rs
src/data/: mod.rs  publish.rs  transfer.rs
src/db/: engine.rs  mod.rs  query.rs
src/ingest/: build_detect.rs  columns.rs  detect.rs  format.rs  mod.rs  reader.rs  sql.rs  sql_gen.rs  vcf.rs
src/output/: human.rs  machine.rs  mod.rs
src/setup/: mod.rs  tui.rs
src/staar/: ancestry.rs  cauchy.rs  geno_load.rs  genotype.rs  ground_truth_test.rs  ground_truth_tests.rs  ld_prune.rs  masks.rs  meta.rs  mod.rs  model.rs  multi.rs  null_model.rs  output.rs  phenotype.rs  pipeline.rs  results.rs  run_manifest.rs  scang.rs  score.rs  score_cache.rs  score_test.rs  scoring.rs  (+10 more)
(+54 files in other folders)
