[package]
name = "favor"
version = "0.1.0"
edition = "2021"
description = "Genomic variant annotation, tissue enrichment, and rare-variant association testing"
license = "GPL-3.0"
repository = "https://github.com/favor-genomics/favor-cli"
authors = ["Xihong Lin Lab <xlin@hsph.harvard.edu>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
ratatui = "0.29"
crossterm = "0.28"
duckdb = { version = "1.2", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
ureq = "3"
dirs = "6"
sha2 = "0.10"
faer = "0.22"
statrs = "0.18"
rayon = "1.10"
walkdir = "2"

# VCF → parquet: streaming parser + columnar writer
noodles-vcf = "0.73"
noodles-bgzf = "0.14"
# noodles-core removed: unused (vcf + bgzf are sufficient)
arrow = { version = "54", default-features = false, features = ["ipc"] }
parquet = { version = "54", default-features = false, features = ["arrow", "zstd"] }

[profile.dev]
# DuckDB bundled is slow to link — split codegen for faster incremental
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.27.0"
